--- a/index.html
+++ b/index.html
@@ -11,20 +11,12 @@
   </head>
 <!--  Logo + lien vers les différentes catégories. -->
   <body>
-    <div class="flex-head"> <a href="index.html"><img class="logo" src="images/logo.png"
-          alt=""></a>
-      <div><a href="#rank" class="menu">
-          <p>Film les mieux notés</p>
-        </a></div>
-      <div><a href="#anime_rank" class="menu">
-          <p>Animation</p>
-        </a></div>
-      <div><a href="#drama_rank" class="menu">
-          <p>Romance</p>
-        </a></div>
-      <div><a href="#fiction_rank" class="menu">
-          <p>Biographie</p>
-        </a></div>
+    <div class="flex-head">
+      <a href="index.html"><img class="logo" src="images/logo.png" alt=""></a>
+      <div><a href="#rank" class="menu"><p>Film les mieux notés</p></a></div>
+      <div><a href="#anime_rank" class="menu"><p>Animation</p></a></div>
+      <div><a href="#drama_rank" class="menu"><p>Romance</p></a></div>
+      <div><a href="#fiction_rank" class="menu"><p>Biographie</p></a></div>
     </div>
 
 <!--Section du film le mieux noté    -->
@@ -38,22 +30,23 @@
             <div id="myModal" class="modal">
               <!-- Modal content -->
               <div class="modal-content">
-                <span class="close" onclick="onClickSpan()">&times;</span>
+<!--                <span class="close" onclick="onClickSpan()">&times;</span>-->
+                  <span class="close">&times;</span>
                 <div class="flex-modal">
                   <div id="modalImage"></div>
-                      <div class="flex-horizon">
-                          <div id="modalTitle"></div>
-                          <div id="modalGenres"></div>
-                          <div id="modalYear"></div>
-                          <div id="modalRated"></div>
-                          <div id="modalImdb_score"></div>
-                          <div id="modalRelease"></div>
-                          <div id="modalActors"></div>
-                          <div id="modalDuration"></div>
-                          <div id="modalCountries"></div>
-                          <div id="modalWorldwide_gross_income"></div>
-                          <div id="modalResume"></div>
-                      </div>
+                  <div class="flex-horizon">
+                      <div id="modalTitle"></div>
+                      <div id="modalGenres"></div>
+                      <div id="modalYear"></div>
+                      <div id="modalRated"></div>
+                      <div id="modalImdb_score"></div>
+                      <div id="modalRelease"></div>
+                      <div id="modalActors"></div>
+                      <div id="modalDuration"></div>
+                      <div id="modalCountries"></div>
+                      <div id="modalWorldwide_gross_income"></div>
+                      <div id="modalResume"></div>
+                  </div>
                 </div>
               </div>
 
@@ -65,44 +58,36 @@
       </div>
     </div>
 
-    <div class="flex">
-      <section class="slider-wrapper">
-        <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
-        <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
-      <div id="rank" class="flex-container"> </div>
-      </section>
-    </div>
-    <!--    Films d'Actions les mieux notés-->
-    <div class="flex">
-      <section class="slider-wrapper">
-        <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
-        <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
-        <div id="anime_rank" class="flex-container"></div>
-      </section>
-    </div>
-    <!--    Films dramatiques les mieux notés-->
-    <div class="flex">
-      <section class="slider-wrapper">
-        <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
-        <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
-        <div id="drama_rank" class="flex-container"></div>
-      </section>
-    </div>
+    <div id="caroussels">
 
-    <!--    Films de sciences fictions les mieux notés-->
-<!--    <div class="flex">-->
-<!--      <div class="arrow_left"><button><</button></div>-->
-<!--      <div id="fiction_rank" class="flex-container"></div>-->
-<!--      <div class="arrow_right"><button>></button></div>-->
-<!--    </div>-->
+            <div class="flex">
+                <button id="rank-arrow-left" class="slide-arrow-prev">&#8249;</button>
+                <div id="rank" class="flex-container"> </div>
+                <button id="rank-arrow-right" class="slide-arrow-next">&#8250;</button>
+            </div>
 
-  <!--    Films de sciences fictions les mieux notés-->
-    <div class="flex">
-      <section class="slider-wrapper">
-        <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
-        <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
-        <div id="fiction_rank" class="flex-container"></div>
-      </section>
+        <!--    Films d'Actions les mieux notés-->
+        <div class="flex">
+            <button class="slide-arrow-prev" >&#8249;</button>
+            <div id="anime_rank" class="flex-container"></div>
+            <button class="slide-arrow-next">&#8250;</button>
+
+        </div>
+
+        <!--    Films dramatiques les mieux notés-->
+        <div class="flex">
+            <button class="slide-arrow-prev" >&#8249;</button>
+            <div id="drama_rank" class="flex-container"></div>
+            <button class="slide-arrow-next">&#8250;</button>
+        </div>
+
+        <!--    Films biographiques les mieux notés-->
+        <div class="flex">
+            <button class="slide-arrow-prev" >&#8249;</button>
+            <div id="bio_rank" class="flex-container"></div>
+            <button class="slide-arrow-next">&#8250;</button>
+        </div>
+
     </div>
 <script src="js.js"></script>
   </body>
