Modal for carrousels

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
       </div>
     </div>
 
-    <div id="caroussels">
+    <div class="carousels">
 
-        <!--    Films d'Animations les mieux notés-->
+        <!--    Films les mieux notés-->
+        <h3>Films les mieux notés</h3>
         <div class="flex">
             <button class="slide-arrow-prev rank-arrow-left">&#8249;</button>
             <div id="rank" class="flex-container"> </div>
@@ -68,6 +69,7 @@
         </div>
 
         <!--    Films d'Animations les mieux notés-->
+        <h3>Animation</h3>
         <div class="flex">
             <button class="slide-arrow-prev anime-arrow-left" >&#8249;</button>
             <div id="anime_rank" class="flex-container"></div>
@@ -76,13 +78,15 @@
         </div>
 
         <!--    Films dramatiques les mieux notés-->
+        <h3>Romance</h3>
         <div class="flex">
-            <button class="slide-arrow-prev drama-arrow-left" >&#8249;</button>
-            <div id="drama_rank" class="flex-container"></div>
-            <button class="slide-arrow-next drama-arrow-right">&#8250;</button>
+            <button class="slide-arrow-prev romance-arrow-left" >&#8249;</button>
+            <div id="romance_rank" class="flex-container"></div>
+            <button class="slide-arrow-next romance-arrow-right">&#8250;</button>
         </div>
 
         <!--    Films biographiques les mieux notés-->
+        <h3>Biographie</h3>
         <div class="flex">
             <button class="slide-arrow-prev bio-arrow-left" >&#8249;</button>
             <div id="bio_rank" class="flex-container"></div>
