--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div class="carousels">
+    <div class="carrousels">
 
         <!--    Films les mieux notés-->
         <h3>Films les mieux notés</h3>
