fix: alex solution reusing yours

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="bestFilm_image"></div>
       <div>
           <div><h2 id="bestFilm_title"></h2></div>
-          <div id="myBtn"><button>Plus de Détails</button>
+          <div><button id="myBtn">Plus de Détails</button>
             <!-- The Modal -->
             <div id="myModal" class="modal">
               <!-- Modal content -->
@@ -97,7 +97,7 @@
         </div>
         -->
     </div>
-<script src="js.js"></script>
+<script src="alex.js"></script>
   </body>
 
 </html>
