Terminée, finaliser css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="bestFilm_image"></div>
       <div>
           <div><h2 id="bestFilm_title"></h2></div>
-          <div id="myBtn"><button>Plus de Détails</button>
+          <div><button id="myBtn">Plus de Détails</button>
             <!-- The Modal -->
             <div id="myModal" class="modal">
               <!-- Modal content -->
@@ -35,7 +35,7 @@
                 <div class="flex-modal">
                   <div id="modalImage"></div>
                   <div class="flex-horizon">
-                      <div id="modalTitle"></div>
+                      <div id="modalTitle">Titre: </div>
                       <div id="modalGenres"></div>
                       <div id="modalYear"></div>
                       <div id="modalRated"></div>
@@ -69,33 +69,27 @@
         </div>
 
         <!--    Films d'Animations les mieux notés-->
-        <!--
         <h3>Animation</h3>
         <div class="flex">
             <button class="slide-arrow-prev anime-arrow-left" >&#8249;</button>
             <div id="anime_rank" class="flex-container"></div>
             <button class="slide-arrow-next anime-arrow-right">&#8250;</button>
-
         </div>
-        -->
+
         <!--    Films dramatiques les mieux notés-->
-        <!--
         <h3>Romance</h3>
         <div class="flex">
             <button class="slide-arrow-prev romance-arrow-left" >&#8249;</button>
             <div id="romance_rank" class="flex-container"></div>
             <button class="slide-arrow-next romance-arrow-right">&#8250;</button>
         </div>
-        -->
         <!--    Films biographiques les mieux notés-->
-        <!--
         <h3>Biographie</h3>
         <div class="flex">
             <button class="slide-arrow-prev bio-arrow-left" >&#8249;</button>
             <div id="bio_rank" class="flex-container"></div>
             <button class="slide-arrow-next bio-arrow-right">&#8250;</button>
         </div>
-        -->
     </div>
 <script src="js.js"></script>
   </body>
