--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                 <div class="flex-modal">
                   <div id="modalImage"></div>
                   <div class="flex-horizon">
-                      <div id="modalTitle"></div>
-                      <div id="modalGenres"></div>
-                      <div id="modalYear"></div>
-                      <div id="modalRated"></div>
-                      <div id="modalImdb_score"></div>
-                      <div id="modalRelease"></div>
-                      <div id="modalActors"></div>
-                      <div id="modalDuration"></div>
-                      <div id="modalCountries"></div>
-                      <div id="modalWorldwide_gross_income"></div>
-                      <div id="modalResume"></div>
+                      <div><span class="titlesModal">Titre: </span><span id="modalTitle"></span></div>
+                      <div><span class="titlesModal">Genre: </span><span id="modalGenres"></span></div>
+                      <div><span class="titlesModal">Année: </span><span id="modalYear"></span></div>
+                      <div><span class="titlesModal">Rated: </span><span id="modalRated"></span></div>
+                      <div><span class="titlesModal">Score Imdb: </span><span id="modalImdb_score"></span></div>
+                      <div><span class="titlesModal">Réalisateurs: </span><span id="modalRelease"></span></div>
+                      <div><span class="titlesModal">Acteurs: </span><span id="modalActors"></span></div>
+                      <div><span class="titlesModal">Durée: </span><span id="modalDuration"></span></div>
+                      <div><span class="titlesModal">Pays: </span><span id="modalCountries"></span></div>
+                      <div><span class="titlesModal">Résultat au Box Office: </span><span id="modalWorldwide_gross_income"></span></div>
+                      <div><span class="titlesModal">Résumé: </span><span id="modalResume"></span></div>
                   </div>
                 </div>
               </div>
