--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h3 id="menu_rank">Films les mieux notés</h3>
         <div class="flex">
             <button class="slide-arrow-prev rank-arrow-left">&#8249;</button>
-            <div id="best_rank" class="flex-container"> </div>
+            <div id="best_rank" class="flex-container carrousel"> </div>
             <button class="slide-arrow-next rank-arrow-right">&#8250;</button>
         </div>
 
@@ -71,7 +71,7 @@
         <h3 id="menu_anime">Animation</h3>
         <div class="flex">
             <button class="slide-arrow-prev anime-arrow-left" >&#8249;</button>
-            <div id="anime_rank" class="flex-container"></div>
+            <div id="anime_rank" class="flex-container carrousel"></div>
             <button class="slide-arrow-next anime-arrow-right">&#8250;</button>
         </div>
 
@@ -79,14 +79,14 @@
         <h3 id="menu_romance">Romance</h3>
         <div class="flex">
             <button class="slide-arrow-prev romance-arrow-left" >&#8249;</button>
-            <div id="romance_rank" class="flex-container"></div>
+            <div id="romance_rank" class="flex-container carrousel"></div>
             <button class="slide-arrow-next romance-arrow-right">&#8250;</button>
         </div>
         <!--    Films biographiques les mieux notés-->
         <h3 id="menu_bio">Biographie</h3>
         <div class="flex">
             <button class="slide-arrow-prev bio-arrow-left" >&#8249;</button>
-            <div id="bio_rank" class="flex-container"></div>
+            <div id="bio_rank" class="flex-container carrousel"></div>
             <button class="slide-arrow-next bio-arrow-right">&#8250;</button>
         </div>
     </div>
